# pre-commit-tofu

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/pre_commit_tofu/: tofu_fmt.py
