[tool.poetry]
name = "pre-commit-tofu"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@gmail.com>"]
readme = "README.md"
packages = [{include = "pre_commit_tofu", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
